# AutomataTheory

./: README.md
Apparatka/: ГАЙД АППАРАТКА.txt
Apparatka/SYSLIB/: MAKET_2.BLK  MAKET_2.DIR  MAKET_2.FIG  MAKET_2.FLG  MAKET_2.GNR  MAKET_2.HDR  MAKET_2.INI  MAKET_2.MAP  MAKET_2.MOD  MAKET_2.NET  MAKET_2.PIN  MAKET_2.SYM  MAKET_2.SYN  MAKET_2.VIS
Apparatka/l2/: lab2.docx
Apparatka/l3/: lab3.docx
Apparatka/l3/Tishin3/: tishin3.alb  tishin3.prj  tishin3.tve  tishin31.BSC  tishin31.SCH
Apparatka/l4/: Tishin4.docx
Apparatka/l4/tishin4/: tishin4.alb  tishin4.prj  tishin4.tve  tishin41.BSC  tishin41.SCH  types.dir  var7129.ASX  var7129.ENT  var7129.ER  var7129.alr  var7129.asf  var7129.bak  var7129.edf  var7129.oid  var7129.vhd  var7129.vhi
Apparatka/l5/: Tishin5.docx
Apparatka/Другие примеры/: TAlab2.docx  TAlab3.docx  TAlab4.docx  TAlab5.docx
ta1/: task.txt
ta1/generator/: correct.txt  generator.cpp  generator.h  generator.vcxproj  generator.vcxproj.filters  incorrect.txt  main.cpp
ta1/ta1/: ta1.cpp  ta1.sln  ta1.vcxproj  ta1.vcxproj.filters
ta1/ta1/Recognizers/: FlexRecognizer.cpp  FlexRecognizer.h  FlexRecognizer.l  statemap.h  (+9 more)
ta1/timeCounter/: timeCounter.cpp  timeCounter.h  timeCounter.vcxproj  timeCounter.vcxproj.filters
ta2/: CMakeLists.txt  dot2png.sh  main.cpp  task.txt
ta2/ast/: CMakeLists.txt  ast.cpp  ast.h
ta2/ast_builder/: CMakeLists.txt  ast_builder.cpp  ast_builder.h
ta2/dfa/: CMakeLists.txt  dfa.cpp  dfa.h
ta2/my_regex/: CMakeLists.txt  my_regex.cpp  my_regex.h
ta2/nfa/: CMakeLists.txt  nfa.cpp  nfa.h
ta2/tests/: tests.cpp
(+44 files in other folders)
